﻿更新履歴

==== Ver 1.3.9-dev(2017/xx/xx)
 * CHG: 「前データを取得」を v1.3.7 より前と同様の動作となるように戻しました
  - スリープからの復帰時など、一度の更新で取得しきれなかった分のツイートを取得したい場合に期待した動作とならないため
 * CHG: ふぁぼ追加時に Err:AlreadyFavorited エラーが発生した場合は成功と見なすようにしました

==== Ver 1.3.8(2017/06/05)
 * NEW: bit.ly の認証方式が変更されました
  - 短縮URLに bit.ly を使用する場合は、設定画面の「短縮URL」から bit.ly の「認可」ボタンを押して認証情報を入力して下さい
 * CHG: 管理者権限での実行時に表示される警告(v1.3.7で追加)を、UACが無効化された環境では表示しないように変更しました
  - この変更はUACの無効化を推奨するものではありません
 * FIX: Microsoft DataMarket廃止により翻訳機能が使用できなくなった不具合を修正
 * FIX: DMの送信後に「OK:Delaying?」の警告が表示される不具合を修正 (thx @o_keiichi!)

==== Ver 1.3.7(2017/03/20)
 * NEW: PNG画像のアップロード時にJPEGへの変換による劣化を回避する機能を追加しました (pic.twitter.com のみ)
  - 設定画面の 動作→投稿 に追加された項目から有効にできます（デフォルト無効）
 * CHG: 簡体字中国語訳のテキストを削除しました
  - 削除されたのはメニューやメッセージの簡体字中国語訳であり、ツイートの翻訳に使用する Bing 翻訳機能は引き続き使用できます
  - UIの翻訳 (l10n) について継続的にサポートできる体制になく、現状の簡体字中国語の翻訳も古いままメンテナンスできていないため当面の間は英語以外の翻訳を提供しません
  - 簡体字中国語を使用しているユーザーは、本バージョンからは英語を使用して下さい (用户使用简体中文，请使用英语作为此版本的显示语言)
 * CHG: OpenTweenを書き込みに制限のあるフォルダ (Program Files など) に配置した場合、設定ファイルを C:\Users\ユーザー名\Roaming\OpenTween\ 以下に保存します
  - 書き込み可能なフォルダ内に配置した場合は、今まで通り OpenTween.exe と同じ場所に保存します
  - OpenTweenを Program Files 内に配置した状態での使用は現時点ではあくまで非推奨です
 * CHG; OpenTweenを管理者権限で起動しようとすると警告が表示されるようになります
  - OpenTweenは管理者権限を必要とするソフトウェアではありません
  - 管理者権限でOpenTweenを起動する事でD&Dでの画像投稿が制限されたり、設定ファイルが管理者以外から編集できなくなる場合があります
 * CHG: QuoteおよびRetweet(Unofficial)を実行した際に、ツイート入力欄に既にテキストが入力されていた場合は削除せず残すように変更しました
 * FIX: OSの設定で小数点にピリオド以外の記号を用いている環境で、Foursquareのサムネイル表示時にエラーが発生する不具合を修正 (thx @Xiatian!)
 * FIX: 「前データを取得」の後に通常の更新が行われると、次に「前データを取得」した際に1件も取得されない不具合を修正
 * FIX: 発言一覧の更新時にエラーが発生する不具合を回避
 * FIX: 短縮URLの生成中に投稿欄のテキストが変更されるとエラーが発生する不具合を修正
 * FIX: フォロー状態の変更やリストに対する追加・削除を行うと、起動し直すまでその後のAPIアクセスが不能になる場合がある不具合を修正
 * FIX: UserStreamsから不正な形式のレスポンスを受信すると切断される不具合を修正
 * FIX: ニコニコ動画のサムネイル情報取得時に発生したエラーが適切に処理されない不具合を修正

==== Ver 1.3.6(2016/11/22)
 * NEW: 画像アップロード時のタイムアウト時間が変更できるようになりました
  - ファイルサイズが大きい画像のアップロードに頻繁に失敗する場合は、長めに設定すると改善する可能性があります
 * CHG: 非公開アカウントであっても自分自身のツイートを公式RTできるようになりました