@@ -1,6 +1,8 @@
 ﻿更新履歴
 
 ==== Ver 1.3.9-dev(2017/xx/xx)
+ * CHG: Twemoji v2.3.0 に対応しました
+  - Unicode 10.0/Emoji 5.0 で追加された絵文字が表示されるようになります
  * CHG: 「前データを取得」を v1.3.7 より前と同様の動作となるように戻しました
   - スリープからの復帰時など、一度の更新で取得しきれなかった分のツイートを取得したい場合に期待した動作とならないため
  * CHG: ふぁぼ追加時に Err:AlreadyFavorited エラーが発生した場合は成功と見なすようにしました
